# poly_finder

./: Cargo.toml  kernel.cu  kernel.ptx  setup.sh
src/: main.rs
